--- a/drag.html
+++ b/drag.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        #Drag{
+            width:100px;height:100px;
+            position:relative;
+        }
+    </style>
 </head>
 <body>
     <div id="Drag"></div>
