--- a/drag.html
+++ b/drag.html
@@ -12,8 +12,12 @@
 			font-size:15px;
 		}
 	</style>
+    <script src="drag.js"></script>
 </head>
 <body>
     <div id="Drag"></div>
+    <script>
+        drag('Drag');
+    </script>
 </body>
 </html>
